# Django_First_project

./: gq_test.py  index.html  pyproject.toml
dashboard/: settings.py  urls.py
static/css/: base.css
templates/: base.html  create_comments.html  create_post.html  create_post_new.html  delete_post.html  edit_post.html  edit_post_new.html  home.html  home_new.html  show_comments.html  show_post_new.html  start_page.html  statistic.html  user_info.html  users.html
todo/: admin.py  class_views.py  forms.py  models.py  new_view.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_initial.py  0003_comments.py  0004_alter_comments_created.py
user/: admin.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_avatar.py
