[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["bakashev <bakashevs@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
pillow = "^9.5.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
